sofia-rs/tui/src/bottom_pane/snapshots/sofia_tui__bottom_pane__experimental_features_view__tests__experimental_features_changed_default.snap
---
source: tui/src/bottom_pane/experimental_features_view_tests.rs
expression: buffer_text(&buffer)
---

  Experimental features
  Checked features are configured on. Some experimental features take effect
  only in new tasks or after restarting the Sofia server.

› [x] Server network_proxy  Description supplied by the server.

  Press space to select or enter to save
