sofia-rs/tui/src/bottom_pane/snapshots/sofia_tui__bottom_pane__experimental_features_view__tests__experimental_features_empty.snap
---
source: tui/src/bottom_pane/experimental_features_view_tests.rs
expression: buffer_text(&buffer)
---

  Experimental features
  Checked features are configured on. Some experimental features take effect
  only in new tasks or after restarting the Sofia server.
  No server experiments available.

  No experimental features available for now

  Press space to select or enter to save
